force-app/main/default/objects/ssot__PatientMedRecileStmtRecommendation__dlm/fields/ssot__MedicationRecileRecmdId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MedicationRecileRecmdId__c</fullName>
    <label>Medication Reconciliation Recmnd</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MedicationRecileRecmdId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>