force-app/main/default/objects/ssot__PatientMedRecileStmtRecommendation__dlm/fields/ssot__rel_1716721977534_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716721977534_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatientMedRecileStmtRecommendation_M_rel</label>
    <referenceTo>ssot__PatientMedReconRecommendation__dlm</referenceTo>
    <relationshipLabel>PatientMedRecileStmtRecommendation_M_rel</relationshipLabel>
    <relationshipName>rel_1716721977534_end</relationshipName>
    <type>Lookup</type>
</CustomField>