force-app/main/default/objects/ssot__PatientMedRecileStmtRecommendation__dlm/fields/ssot__SourceSysModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__SourceSysModifiedDateTime__c</fullName>
    <label>Source System Modified Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SourceSysModifiedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>